# feng

./: .gitignore  config.schema.yaml  feng.yaml  go.mod  goal.md  hooks.yaml  identity.md  interface.yaml  package-lock.json  package.json  permissions.yaml  pyproject.toml  tsconfig.build.json  tsconfig.json  vitest.config.ts
cmd/feng/: main.go
docs/: agent-design-learning-summary.md  agent-research-notes.md  agent-research-rounds.md  agent-scenarios.md  architecture.md  claude-code-borrowing-notes.md  core-requirements.md  feng-design-completion-audit.md  feng-design-prep-rounds.md  feng-goal-coverage-audit.md  feng-kernel-and-long-running-design.md  feng-novel-case-flow.md  feng-quality-gates.md  feng-system-overview-design.md  llm-provider-research.md  mvp-self-iteration-design.md  product-concept.md  runtime-language.md
docs/agent-expectations/: api-testing-agent.md  claude-code-session-manager-agent.md  coding-agent.md  feng-agent.md  news-summary-agent.md  robot-car-agent.md  windows-desktop-assistant-agent.md
docs/architecture-review/: review-method.md
docs/detailed-design/: README.md  final-audit.md  module-spec-process.md  progress-audit.md  top-level-module-design-rounds.md  top-level-module-design.md
docs/development-reviews/: admission-feedback-inbox.md  agenda-dod-manager.md  agent-runtime-kernel.md  artifact-registry.md  cli-serialized-continuation.md  cli.md  context-message-compiler.md  cross-instance-supervision.md  (+16 more)
evals/: README.md
skills/: README.md
src/: index.ts
tests/: test_mvp_kernel.py
tools/: README.md
world/: README.md
(+732 files in other folders)
