[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "feng"
version = "0.1.0"
description = "A minimal self-growing agent kernel."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
feng = "feng.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
